# modplayer

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  REVIVAL.XM  Xargo.toml  diff.txt  error.json  strshine_refactor.txt  test_output.txt  xmplayer_master_song.rs
.claude/skills/detect-render-bugs/: SKILL.md
binary-reader-io/: Cargo.toml
binary-reader-io/src/: lib.rs
corpus/: README.md
display/: Cargo.toml
display/src/: grid.rs  lib.rs
display/src/display/: 68edb98e_display.rs  cc4bff45_display.rs  mod.rs
docs/: ui_troubleshooting.md  ui_visualization_skill.md
modplayer-bin/: Cargo.toml
modplayer-bin/src/: display.rs  main.rs  media_keys_macos.rs  portaudio_audio.rs  sdl2_audio.rs  settings.rs
modplayer-bindgen/: Cargo.toml
modplayer-bindgen/src/: emscripten_boilerplate.rs  lib.rs
modplayer-emscripten/: Cargo.toml  README.md  Web.toml  Xargo.toml
modplayer-emscripten/src/: emscripten_boilerplate.rs  main.rs
modplayer-emscripten/src/static/: index.html
modplayer-lib/: Cargo.toml
modplayer-lib/src/: external_audio.rs  lib.rs  portaudio_audio.rs  sdl2_audio.rs
modplayer-wasm/: Cargo.toml  Web.toml  Xargo.toml  export.js  pack.bat
modplayer-wasm/.cargo/: config
modplayer-wasm/src/: display.rs  emscripten_boilerplate.rs  leak.rs  lib.rs  main.rs
modplayer-wasm/src/console/: mod.rs
modplayer-wasm/src/display/: mod.rs
modplayer-wasm/src/static/: index.html  library.js  module.js
modplayer-wasm/tests/: wasm.rs
modplayer-wasm/www/: audio-worklet.js  index.html  index.js  package-lock.json  package.json  robots.txt  sitemap.xml  style.css  webpack.config.js
modplayer-wasm/www/libs/: bootstrap.min.css
scratch/: bench.rs
scripts/: bisect_channel.py  cents_distribution.py  compare_renders.py  corpus_regression.py  diff_bisect.py  effect_test_runner.py  fft_compare.py  find_pops.py  peek_window.py  run_openmpt_mod_tests.py  run_openmpt_tests.py  sc2_pt2_compare.py  sweep.py
shared-sync-primitives/: Cargo.toml
shared-sync-primitives/src/: lib.rs
src/: main.rs
src/channel/: mod.rs
src/channel/channel_state/: mod.rs
src/channel_state/: channel_state.rs  mod.rs
src/envelope/: mod.rs
src/io_helpers/: mod.rs
src/producer_consumer_queue/: mod.rs
src/song/: mod.rs
src/xm_reader/: mod.rs
tests/: tests.rs
tests/openmpt_cases/it/: CarryNNA.it  DoubleSlide.it  DoubleSlideCompatGxx.it  LxxWith0Portamento-Amiga.it  LxxWith0Portamento-Linear.it  S7B_StillAppliesFilter.it  SCx-Reset.it  VolColNoSlideMemoryPropagation.it  ins-oc.it  ins-ox.it  ins-xc.it
tests/openmpt_cases/mod/: PTOffsetRetrigger.mod
tests/openmpt_cases/xm/: OffsetWithoutNote.xm  TremoloWaveforms.xm
tools/: build_corpus.sh  build_ft2play_cli.sh  build_it2play_cli.sh  build_openmpt_inst.sh  build_openmpt_solo.sh  build_pt2_clone_cli.sh  build_st3play_cli.sh  ft2play_cli_render.patch  ft2play_instrumentation.patch  it2play_cli_render.patch  openmpt_instrumentation.patch  openmpt_solo.c  pt2_clone_cli_render.patch  st3play_cli_render.patch
xmplayer/: Cargo.toml  Web.toml  Xargo.toml
xmplayer/scratch/: check_duplicates.py  check_leaks.py  check_orphaned.py  check_orphans.py  check_redundant.py  compare_2nd_reality.py  compare_active.py  compare_dumps.py  dump_order.rs  dump_pat.rs  dump_pattern.py  find_orphans.py  inspect_s3m.py
xmplayer/src/: dump_compare_test.rs  it_fidelity_tests.rs  it_mapping_tests.rs  lib.rs  s3m_fidelity_tests.rs  s3m_pattern_fidelity.rs  test_utils.rs  xm_fidelity_tests.rs
xmplayer/src/TripleBuffer/: mod.rs
xmplayer/src/channel_state/: channel_state.rs  mod.rs
xmplayer/src/envelope/: mod.rs
xmplayer/src/instrument/: mod.rs
xmplayer/src/io_helpers/: mod.rs
xmplayer/src/module_reader/: it.rs  it_compression.rs  mod.rs  module.rs  s3m.rs  stm.rs  xm.rs
xmplayer/src/pattern/: mod.rs
xmplayer/src/producer_consumer_queue/: mod.rs
xmplayer/src/song/: 68edb98e_song.rs  backend.rs  commands.rs  display.rs  it_support_diff.patch  mod.rs  output.rs  playback.rs  test_dump.rs
xmplayer/src/song/backend/: it.rs  mod_.rs  s3m.rs  xm.rs
xmplayer/src/song_state/: leak.rs  mod.rs
xmplayer/src/tables/: mod.rs
xmplayer/src/triple_buffer/: mod.rs
xmplayer/src/xm_reader/: mod.rs
xmplayer/test_data/: 2nd_reality_master.txt  2nd_reality_refactor.txt  AmigaLimitsFinetune_dump.txt  milky_dump.txt  spacedeb_dump.txt
xmplayer/tests/: bench_seek.rs  comprehensive_fidelity.rs  debug_it_file.rs  dump_2nd_pm_ch0.rs  dump_info.rs  dump_order.rs  dump_pat.rs  effects_fidelity.rs  effects_logic.rs  fetch_openmpt.sh  fidelity_phase_3_4.rs  fidelity_phase_5_6.rs  fidelity_phase_7.rs  fidelity_phase_8.rs  fidelity_phase_9.rs  golden_render.rs  instrument_fidelity.rs  note_period_compare.rs  s3m_artifacts.rs  state_dump_test.rs  synthetic_effect_tests.rs
