[workspace]
resolver = "2"
members = ["xmplayer", "display", "modplayer-bin", "modplayer-wasm", "modplayer-lib", "shared-sync-primitives", "binary-reader-io"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package.xmplayer]
opt-level = 3
