[package]
name = "modplayer-bin"
version = "0.1.0"
authors = ["gilad.benor@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portaudio = "0.7"
crossbeam = "0.7"
getch = "0.2.1"
xmplayer = {path="../xmplayer"}
#tokio = { version = "0.2", features = ["full"] }
#memmap = { git = "https://github.com/danburkert/memmap-rs" }
async-scoped = "0.4.1"
crossterm = "0.17.5"