[package]
name = "modplayer-bin"
version = "0.1.0"
authors = ["gilad.benor@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["sdl2-feature"] # "portaudio-feature"/"sdl2-feature"
portaudio-feature = ["portaudio"]
sdl2-feature = ["sdl2"]
#sdl2 = [package.metadata.vcpkg]

[dependencies]
portaudio = {version = "0.7", optional = true}
crossbeam = "0.7"
getch = "0.2.1"
xmplayer = {path="../xmplayer"}
display = {path="../display"}
#tokio = { version = "0.2", features = ["full"] }
#memmap = { git = "https://github.com/danburkert/memmap-rs" }
#async-scoped = "0.4.1"
crossterm = "0.17.5"


# uncomment for termux
#[target.'cfg(os = "android")'.patch.crates-io]
#termios = { path = "../vendor/termios-0.2.2" }

[dependencies.sdl2]
version = "0.34.2"
optional = true
features = ["bundled","static-link","use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
rev = "a0518036077baa4"
optional = true

