[package]
name = "modplayer-bin"
version = "0.1.0"
authors = ["gilad.benor@gmail.com"]
edition = "2018"

[features]
default = ["sdl2-feature"] # "portaudio-feature"/"sdl2-feature"
portaudio-feature = ["portaudio"]
sdl2-feature = ["sdl2"]
#sdl2 = [package.metadata.vcpkg]

[dependencies]
portaudio = {version = "0.7", optional = true}
xmplayer = {path="../xmplayer"}
display = {path="../display"}
crossterm = "0.29.0"


# uncomment for termux
#[target.'cfg(os = "android")'.patch.crates-io]
#termios = { path = "../vendor/termios-0.2.2" }

[dependencies.sdl2]
version = "0.38.0"
optional = true
features = ["bundled","static-link","use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
rev = "2024.05.24" # release 2024.05.24 # to check for a new one, check https://github.com/microsoft/vcpkg/releases
optional = true

