#[workspace]

[package]
name = "rust-wasm-modplayer"
version = "1.0.0"
edition = "2018"


[dependencies]
crossbeam = "0.7"
xmplayer = {path="../xmplayer"}
display = {path="../display"}
lazy_static = "1.4.0"
#sdl2 = { version = "0.34.3", default-features = false }
#crossterm = "0.17.5"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]