[package]
name = "modplayer-lib"
version = "0.1.0"
authors = ["gilad.benor@gmail.com"]
edition = "2018"

[lib]
name = "modplayer"
crate-type = ["staticlib"]

#[target.i686-pc-windows-msvc]
#rustflags = ["-C", "target-feature=+crt-static", "-C", "-target-cpu=mycpu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["sdl2-feature"] # "portaudio-feature"/"sdl2-feature"
portaudio-feature = ["portaudio"]
sdl2-feature = ["sdl2"]
#sdl2 = [package.metadata.vcpkg]

[dependencies]
portaudio = {version = "0.7", optional = true}
crossbeam = "0.7"
simple-error = "0.2.2"
xmplayer = {path="../xmplayer"}

[dependencies.sdl2]
version = "0.35.2"
optional = true
default-features = false
features = ["bundled"]
#features = ["bundled","static-link","use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"
rev = "a0518036077baa4"
optional = true

#[profile.release]
#lto = true
#panic = 'abort'
