[package]
name = "modplayer-lib"
version = "0.1.0"
authors = ["gilad.benor@gmail.com"]
edition = "2024"

[lib]
name = "modplayer"
crate-type = ["staticlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["sdl2-feature"] # "portaudio-feature"/"sdl2-feature"/"external-audio"
portaudio-feature = ["portaudio"]
sdl2-feature = ["sdl2"]
# external-audio: no audio backend in Rust. Host (C/C++) opens its own audio
# device and pulls samples via the Modplayer_FillBuffer C API. Required for
# Emscripten where the bundled sdl2 crate collides with emcc's -sUSE_SDL=2.
external-audio = []

[dependencies]
portaudio = {version = "0.8", optional = true}
crossbeam = "0.8.4"
xmplayer = {path="../xmplayer"}
shared-sync-primitives = {path="../shared-sync-primitives"}
binary-reader-io = {path="../binary-reader-io"}

[dependencies.sdl2]
version = "0.38.0"
optional = true
features = ["bundled", "static-link"]
#git = "https://github.com/Rust-SDL2/rust-sdl2"
#rev = "27cd1fd67c811e06b9d997a77bb6089a1b65070d"
#features = ["bundled","static-link","use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2"]
#git = "https://github.com/microsoft/vcpkg"
#rev = "a0518036077baa4"
optional = true

#[profile.release]
#lto = true
#panic = 'abort'
