#[workspace]

[package]
name = "modplayer-wasm"
version = "1.0.0"
edition = "2018"

[dependencies]
crossbeam = "0.8.1"
xmplayer = {path="../xmplayer"}
#display = {path="../display"}
lazy_static = "1.4.0"
wasm-bindgen = "0.2"
js-sys = "0.3.46"
cfg-if = "1.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[profile.release]
#wasm-opt = { opt-level = "z" }
#wasm-snip = { snip-rust-fmt-code = true, snip-rust-panicking-code = true }
lto = true
wasm-bindgen = true
debug = true
# Should we enable wasm-bindgen's debug assertions in its generated JS glue?
debug-js-glue = true
# Should wasm-bindgen demangle the symbols in the "name" custom section?
demangle-name-section = true
# Should we emit the DWARF debug info custom sections?
dwarf-debug-info = true

[lib]
crate-type = ["cdylib", "rlib"]
