#[workspace]

[package]
name = "modplayer-wasm"
version = "1.0.0"
edition = "2018"

[dependencies]
crossbeam = "0.8.1"
xmplayer = {path="../xmplayer"}
#display = {path="../display"}
lazy_static = "1.4.0"
wasm-bindgen = "0.2"
js-sys = "0.3.46"
cfg-if = "1.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[lib]
crate-type = ["cdylib", "rlib"]
