#[workspace]

[package]
name = "modplayer-wasm"
version = "1.0.0"
edition = "2024"

[dependencies]
xmplayer = {path="../xmplayer"}
wasm-bindgen = { version = "0.2.100" }
js-sys = "0.3.77"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.77", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[lib]
crate-type = ["cdylib", "rlib"]
