[package]
name = "xmplayer"
version = "0.1.0"
authors = ["gilad.benor@gmail.com"]
edition = "2024"
exclude = ["build/**/it.o"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xmplayer"
crate-type = ["rlib"]

[dependencies]
shared-sync-primitives = { path = "../shared-sync-primitives" }
binary-reader-io = { path = "../binary-reader-io" }
lazy_static = "1.4.0"
simple-error = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
rustfft = "6.2.0"
num-complex = "0.4.6"
